--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <meta name="theme-color" content="#ffffff">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sriracha&&family=Kosugi+Maru&display=swap" rel="stylesheet">
@@ -25,13 +27,4 @@
     </noscript>
     <div id="app"></div>
   </body>
-  <!-- <script>
-    window.console.log = function() {
-      console.error('Sorry friend, no outside scripts allowed here 😉')
-      console.warn('Email support@genkan.app if you want to contribute to our project.')
-      window.console.log = function() {
-        return false;
-      }
-    }
-  </script> -->
 </html>
