adds story creation and button, accepts JWT API

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sriracha&&family=Kosugi+Maru&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sriracha&family=Noto+Sans+JP:wght@400;700&family=DotGothic16&display=swap" rel="stylesheet">
     <title>Genkan</title>
   </head>
   <body oncontextmenu="return false;">
