implements story draft editing and submission, implements users adding comments

--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,13 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/85c3f411d3.js" crossorigin="anonymous"></script>
     <!-- Material Icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" defer>
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sriracha&family=Noto+Sans+JP:wght@400;700&family=DotGothic16&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" defer>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sriracha&family=Noto+Sans+JP:wght@400;700&family=DotGothic16&display=swap" rel="stylesheet" defer>
     <title>Genkan</title>
   </head>
+  
   <body oncontextmenu="return false;">
     <noscript>
       <strong>We're sorry but Genkan doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
