--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" defer>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sriracha&family=Noto+Sans+JP:wght@400;700&family=DotGothic16&display=swap" rel="stylesheet" defer>
-    <title>Genkan</title>
+    <title>Genkan (Alpha)</title>
   </head>
   
   <body oncontextmenu="return false;">
