--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Genkan (Alpha)</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#603cba">
-    <meta name="theme-color" content="#ffffff">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sriracha&family=Noto+Sans+JP:wght@400;700&family=DotGothic16&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/85c3f411d3.js" crossorigin="anonymous"></script>
     <!-- Material Icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" defer>
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" defer>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sriracha&family=Noto+Sans+JP:wght@400;700&family=DotGothic16&display=swap" rel="stylesheet" defer>
-    <title>Genkan (Alpha)</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- PWA related -->
+    <!-- <link rel="manifest" href="/site.webmanifest"> -->
+    <!-- Safari PWA -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Genkan">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+    <!-- IE PWA -->
+    <meta name="msapplication-TileImage" content="/mstile-150x150.png">
+    <meta name="msapplication-TileColor" content="#8c7ae6">
+    <!-- Other Browsers -->
+    <meta name="theme-color" content="#3f51b5">
   </head>
   
   <body oncontextmenu="return false;">
