--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,11 @@
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet"> 
+
     <!-- PWA related -->
     <!-- <link rel="manifest" href="/site.webmanifest"> -->
     <!-- Safari PWA -->
