scrollbar changes for Windows browsers

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <meta name="theme-color" content="#3f51b5">
   </head>
   
-  <body oncontextmenu="return false;">
+  <body>
     <noscript>
       <strong>We're sorry but Genkan doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
